--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "email-validator>=2.2.0",
+    "feedparser>=6.0.11",
     "flask>=3.1.0",
     "flask-sqlalchemy>=3.1.1",
     "frontmatter>=3.0.8",
     "markdown>=3.7",
     "psycopg2-binary>=2.9.10",
     "python-frontmatter>=1.1.0",
+    "pyyaml>=5.1",
 ]
